UBUNTU: SAUCE: drm/i915/gen9bc: Handle TGP PCH during suspend/resume

BugLink: https://bugs.launchpad.net/bugs/1913682

For Legacy S3 suspend/resume GEN9 BC needs to enable and
setup TGP PCH.

Cc: Matt Roper <matthew.d.roper@intel.com>
Signed-off-by: Tejas Upadhyay <tejaskumarx.surendrakumar.upadhyay@intel.com>
Bug: https://gitlab.freedesktop.org/drm/intel/-/issues/2915
Reference: https://patchwork.freedesktop.org/patch/416162/
Signed-off-by: Koba Ko <koba.ko@canonical.com>
Signed-off-by: Timo Aaltonen <timo.aaltonen@canonical.com>